--- a/src/app/pages/setting/components/courses/list-course/list-course.component.html
+++ b/src/app/pages/setting/components/courses/list-course/list-course.component.html
@@ -39,7 +39,7 @@
       <table-column header="Loại khóa học" key="type" [width]="'200px'">
         <ng-template appCell let-data>
           <span *ngIf="data.type === 1">Khóa phễu</span>
-          <span *ngIf="data.type === 2">Khóa lớn</span>
+          <span *ngIf="data.type === 2">Khóa lỡn</span>
         </ng-template>
       </table-column>
       <table-column header="Tên diễn giả" key="teacherName" [width]="'200px'"></table-column>
