add fn fotgot pass

--- a/src/app/layouts/auth-layout/auth/auth.component.html
+++ b/src/app/layouts/auth-layout/auth/auth.component.html
@@ -45,7 +45,7 @@
     </div>
 
     <button class="form-btn" (click)="login()">Đăng nhập</button>
-    <p class="forgot-password">Quên mật khẩu?</p>
+    <p class="forgot-password" (click)="forgotPassword">Quên mật khẩu?</p>
   </form>
 </div>
 
