--- a/src/app/pages/student/components/non-divided-student/non-divided-student.component.html
+++ b/src/app/pages/student/components/non-divided-student/non-divided-student.component.html
@@ -59,7 +59,7 @@
       <table-column header="Email" key="email" [width]="'200px'"></table-column>
       <table-column header="Mã học viên" key="code" [width]="'180px'"></table-column>
       <table-column header="Loại vé" key="ticket" [width]="'180px'"></table-column>
-      <table-column header="Người giới thiệu" key="userRef" [width]="'180px'"></table-column>
+      <table-column header="Người giới thiệu" key="emailRef" [width]="'180px'"></table-column>
       <table-column header="Thuộc tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="Tên diễn giả" key="teacherName" [width]="'200px'"></table-column>
       <table-column header="Tên khóa học" key="title" [width]="'200px'"></table-column>
@@ -86,8 +86,10 @@
         </ng-template>
 
         <ng-template appCell let-data>
-          <span class="custom-action" (click)="detail(data)">Chi tiết</span>
-
+          <span class="custom-action" (click)="detail(data)"
+                nz-tooltip nzTooltipTitle="Chi tiết">
+            <span nz-icon nzType="user" nzTheme="outline" class="custom-icon"></span>
+          </span>
         </ng-template>
       </table-column>
     </app-table>
