--- a/src/app/pages/lesson/components/lesson/lesson.component.html
+++ b/src/app/pages/lesson/components/lesson/lesson.component.html
@@ -25,14 +25,21 @@
       <table-column header="Tên khóa học" key="courseName" [width]="'200px'"></table-column>
       <table-column header="Tên diễn giả" key="teacherName" [width]="'200px'"></table-column>
       <table-column header="Tên tổ chức" key="organizationName" [width]="'150px'"></table-column>
+      <table-column header="Link zoom" key="linkZoom" [width]="'150px'"></table-column>
       <table-column [width]="'180px'" fixColumn="right" >
         <ng-template appHeader>
           Chức năng
         </ng-template>
 
         <ng-template appCell let-data>
-          <span class="custom-action" (click)="edit(data)">
-           Chỉnh sửa
+          <span class="custom-action" (click)="edit(data)"
+                nz-tooltip nzTooltipTitle="Chỉnh sửa buổi học">
+            <span nz-icon nzType="edit" nzTheme="outline" class="custom-icon"></span>
+          </span>
+
+          <span class="custom-action" (click)="attachLinkZoom(data)"
+                nz-tooltip nzTooltipTitle="Gắn link zoom">
+            <span nz-icon nzType="play-square" nzTheme="outline" class="custom-icon"></span>
           </span>
         </ng-template>
       </table-column>
