fix: apply new api payment and add des profile

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -342,6 +342,13 @@
               </div>
 
               <div nz-col [nzSpan]="24">
+                <span class="title-text">
+                  Giới thiệu ngắn
+                </span>
+                <textarea nz-input [nzAutosize]="{ minRows: 3}" formControlName="description"></textarea>
+              </div>
+
+              <div nz-col [nzSpan]="24">
                 <div class="password-btn">
                   <button
                     nz-button nzType="primary"
