fix: change customer list

--- a/src/app/pages/customer/components/customer-list/customer-list.component.html
+++ b/src/app/pages/customer/components/customer-list/customer-list.component.html
@@ -17,7 +17,7 @@
       [loading]="loading"
     >
       <table-column header="STT" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
-      <table-column header="Ngày đăng ký" key="createdDate" [dataType]="COL_DATA_TYPE.DATE" [width]="'150px'"></table-column>
+      <table-column header="Ngày đăng ký" key="createDate" [dataType]="COL_DATA_TYPE.DATE" [width]="'150px'"></table-column>
       <table-column header="Tên khách hàng" key="name" [width]="'200px'"></table-column>
       <table-column header="Mã khách hàng" key="customerCode" [width]="'200px'"></table-column>
       <table-column header="Số điện thoại" key="phoneNumber" [width]="'120px'"></table-column>
