--- a/src/app/pages/customer/components/customer-list/customer-list.component.html
+++ b/src/app/pages/customer/components/customer-list/customer-list.component.html
@@ -35,6 +35,11 @@
                 nz-tooltip nzTooltipTitle="Chỉnh sửa thông tin khách hàng">
             <span nz-icon nzType="edit" nzTheme="outline" class="custom-icon"></span>
           </span>
+
+          <span class="custom-action" (click)="assignRole(data)"
+                nz-tooltip nzTooltipTitle="Phân quyền">
+            <span nz-icon nzType="edit" nzTheme="outline" class="custom-icon"></span>
+          </span>
         </ng-template>
       </table-column>
     </app-table>
