add optional course

--- a/src/app/pages/attendance/components/list-attendance/list-attendance.component.html
+++ b/src/app/pages/attendance/components/list-attendance/list-attendance.component.html
@@ -26,9 +26,11 @@
       <table-column header="STT" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
       <table-column header="Thời gian" key="attendanceTime" [width]="'200px'"></table-column>
       <table-column header="Tên học viên" key="studentName" [width]="'200px'"></table-column>
-      <table-column header="Nhân viên chăm sóc" key="userCareName" [width]="'200px'"></table-column>
+      <table-column header="Nhân viên chăm sóc" key="caregiverName" [width]="'200px'"></table-column>
+      <table-column header="Số điện thoại" key="studentPhoneNumber" [width]="'200px'"></table-column>
       <table-column header="Email" key="studentEmail" [width]="'200px'"></table-column>
       <table-column header="Lớp tham gia" key="className" [width]="'200px'"></table-column>
+      <table-column header="Tên buổi học" key="lessonName" [width]="'200px'"></table-column>
       <table-column header="Tên khóa học" key="courseName" [width]="'200px'"></table-column>
       <table-column header="Tên diễn giả" key="teacherName" [width]="'200px'"></table-column>
       <table-column header="Thuộc tổ chức" key="organizationName" [width]="'200px'"></table-column>
