--- a/src/app/pages/e-learning-membership/components/membership-list/membership-list.component.html
+++ b/src/app/pages/e-learning-membership/components/membership-list/membership-list.component.html
@@ -72,6 +72,11 @@
             <span nz-icon nzType="edit" nzTheme="outline" class="custom-icon"></span>
           </span>
 
+          <span class="custom-action" (click)="editOptionalCourse(data)"
+                nz-tooltip nzTooltipTitle="Thiết lập khóa học tùy chọn">
+            <span nz-icon nzType="book" nzTheme="outline" class="custom-icon"></span>
+          </span>
+
           <span class="custom-action delete" (click)="delete(data)"
                 nz-tooltip nzTooltipTitle="Xoá chính sách">
             <span nz-icon nzType="delete" nzTheme="outline" class="custom-icon"></span>
