--- a/src/app/pages/attendance/components/list-attendance/list-attendance.component.html
+++ b/src/app/pages/attendance/components/list-attendance/list-attendance.component.html
@@ -29,6 +29,7 @@
       <table-column header="Nhân viên chăm sóc" key="caregiverName" [width]="'200px'"></table-column>
       <table-column header="Số điện thoại" key="studentPhoneNumber" [width]="'200px'"></table-column>
       <table-column header="Email" key="studentEmail" [width]="'200px'"></table-column>
+      <table-column header="Số lần điểm danh" key="numOfAttendance" [width]="'200px'"></table-column>
       <table-column header="Lớp tham gia" key="className" [width]="'200px'"></table-column>
       <table-column header="Tên buổi học" key="lessonName" [width]="'200px'"></table-column>
       <table-column header="Tên khóa học" key="courseName" [width]="'200px'"></table-column>
