--- a/src/app/pages/e-learning-membership/components/config/config-detail/config-detail.component.html
+++ b/src/app/pages/e-learning-membership/components/config/config-detail/config-detail.component.html
@@ -6,18 +6,6 @@
   <div nz-col [nzSpan]="20">
     <form [formGroup]="membershipConfigForm">
       <div nz-row [nzGutter]=[16,16]>
-        <div nz-col [nzSpan]="8">
-          <span class="text-label">
-            Số ngày không hoạt động tối đa
-          </span>
-
-          <nz-input-number formControlName="numberDaysInactivity" [nzMin]="0" [nzStep]="1"></nz-input-number>
-        </div>
-
-        <div nz-col [nzSpan]="16">
-
-        </div>
-
         <div nz-col [nzSpan]="4">
           <label nz-checkbox formControlName="isShowPriceMonth">Hiển thị giá 1 tháng</label>
         </div>
@@ -33,6 +21,18 @@
         <div nz-col [nzSpan]="4">
           <label nz-checkbox formControlName="isShowPriceForever">Hiển thị giá vĩnh viễn</label>
         </div>
+
+        <div nz-col [nzSpan]="8"></div>
+
+        <div nz-col [nzSpan]="8">
+          <span class="text-label">
+            Số ngày không hoạt động tối đa
+          </span>
+
+          <nz-input-number formControlName="numberDaysInactivity" [nzMin]="0" [nzStep]="1"></nz-input-number>
+        </div>
+
+        <div nz-col [nzSpan]="16"></div>
 
         <div nz-col [nzSpan]="16">
           <span class="text-label">
