--- a/src/app/pages/e-learning-student/components/taking-care-e-student/taking-care-e-student.component.html
+++ b/src/app/pages/e-learning-student/components/taking-care-e-student/taking-care-e-student.component.html
@@ -21,7 +21,6 @@
       <table-column header="Email" key="email" [width]="'200px'"></table-column>
       <table-column header="Mã học viên" key="code" [width]="'180px'"></table-column>
       <table-column header="Người giới thiệu" key="userRef" [width]="'180px'"></table-column>
-      <table-column header="Thuộc tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="Nhân viên chăm sóc" key="caregiverName" [width]="'180px'"></table-column>
       <table-column header="Trạng thái" key="status" [width]="'180px'">
         <ng-template appCell let-data>
@@ -29,26 +28,46 @@
           <span class="text-invalid" *ngIf="!data.status">Chưa kích hoạt</span>
         </ng-template>
       </table-column>
+      <table-column header="Thuộc tổ chức" key="organizationName" [width]="'200px'"></table-column>
       <table-column [width]="'180px'" fixColumn="right" >
         <ng-template appHeader>
           Chức năng
         </ng-template>
 
         <ng-template appCell let-data>
-          <button
-            nz-dropdown nzTrigger="click" [nzDropdownMenu]="menu"
-            nz-button nzShape="circle">
-            <span nz-icon nzType="bars"></span>
-          </button>
+<!--          <button-->
+<!--            nz-dropdown nzTrigger="click" [nzDropdownMenu]="menu"-->
+<!--            nz-button nzShape="circle">-->
+<!--            <span nz-icon nzType="bars"></span>-->
+<!--          </button>-->
 
-          <nz-dropdown-menu #menu="nzDropdownMenu">
-            <ul nz-menu>
-              <li nz-menu-item>Xem chi tiết</li>
-              <li nz-menu-item>Gọi điện</li>
-              <li nz-menu-item>Nâng gói thành viên</li>
-              <li nz-menu-item>Kích hoạt khóa học</li>
-            </ul>
-          </nz-dropdown-menu>
+<!--          <nz-dropdown-menu #menu="nzDropdownMenu">-->
+<!--            <ul nz-menu>-->
+<!--              <li nz-menu-item>Xem chi tiết</li>-->
+<!--              <li nz-menu-item>Gọi điện</li>-->
+<!--              <li nz-menu-item>Nâng gói thành viên</li>-->
+<!--              <li nz-menu-item (click)="activeCourse(data)">Kích hoạt khóa học</li>-->
+<!--            </ul>-->
+<!--          </nz-dropdown-menu>-->
+          <span class="custom-action"
+                nz-tooltip nzTooltipTitle="Chi tiết học viên">
+            <span nz-icon nzType="search" nzTheme="outline"></span>
+          </span>
+
+          <span class="custom-action"
+                nz-tooltip nzTooltipTitle="Gọi điện">
+            <span nz-icon nzType="phone" nzTheme="outline"></span>
+          </span>
+
+          <span class="custom-action"
+                nz-tooltip nzTooltipTitle="Nâng gói thành viên">
+            <span nz-icon nzType="arrow-up" nzTheme="outline"></span>
+          </span>
+
+          <span class="custom-action" (click)="activeCourse(data)"
+                nz-tooltip nzTooltipTitle="Tặng khóa học">
+            <span nz-icon nzType="gift" nzTheme="outline"></span>
+          </span>
         </ng-template>
       </table-column>
     </app-table>
