--- a/src/app/pages/e-learning-student/components/taking-care-e-student/taking-care-e-student.component.scss
+++ b/src/app/pages/e-learning-student/components/taking-care-e-student/taking-care-e-student.component.scss
@@ -25,6 +25,8 @@
 .custom-action{
   cursor: pointer;
   padding-right: 8px;
+  font-size: 18px;
+  padding-right: 8px;
   &:hover{
     color: #1677ff;
   }
@@ -41,5 +43,6 @@
 .text-invalid {
   color: #ff4d4f;
 }
+
 
 
