--- a/src/app/shared/layouts/side-bar/side-bar.component.html
+++ b/src/app/shared/layouts/side-bar/side-bar.component.html
@@ -5,11 +5,11 @@
           [(nzCollapsed)]="isCollapsed">
   <div class="sidebar-logo">
     <a href="/">
-      <ng-container *ngIf="dataOrg && dataOrg.logo1x1;else logo1x1Default">
+      <ng-container *ngIf="dataOrg && dataOrg.logo1x1">
         <img [style.opacity]="!isCollapsed? 0 : 1" [src]="dataOrg.logo1x1" alt="logo" >
       </ng-container>
 
-      <ng-container *ngIf="dataOrg && dataOrg.logo;else logoDefault">
+      <ng-container *ngIf="dataOrg && dataOrg.logo">
         <img [style.opacity]="isCollapsed? 0 : 1" [src]="dataOrg.logo" alt="logo" >
       </ng-container>
 
@@ -31,12 +31,8 @@
   </ul>
 </nz-sider>
 
-<ng-template #logo1x1Default>
-  <img [style.opacity]="!isCollapsed? 0 : 1" src="assets/img/black-logo.png" alt="logo">
-</ng-template>
-
-<ng-template #logoDefault>
-  <img [style.opacity]="isCollapsed? 0 : 1" class="text-logo" src="assets/img/text-logo.svg">
-</ng-template>
+<!--<ng-template #logo1x1Default>-->
+<!--  <img [style.opacity]="!isCollapsed? 0 : 1" src="assets/img/black-logo.png" alt="logo">-->
+<!--</ng-template>-->
 
 
